Bug 51590 - UI: Conditional formatting : wrong preview when editing
Summary: UI: Conditional formatting : wrong preview when editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-30 05:06 UTC by pierre-yves samyn
Modified: 2012-08-25 14:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with conditionnal formating already defined (9.59 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-30 05:06 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-06-30 05:06:57 UTC
Created attachment 63640 [details]
Spreadsheet with conditionnal formating already defined

Hello

Description:

Conditional formatting : preview is only ok when choosing a style, not on editing or consulting 

Steps to reproduce:

1. Open the attached spreadsheet
2. Select A2, Format> Conditional formatting> Conditional Formatting...

Expected result:
Display 3 conditions with differents previews 

Actual result :
Preview  without attributes (even different from "default")

Platform: 

Windows7 64 bits & Version 3.6.0.0.beta2 (Build ID: f010139)

Regards
Pierre-Yves
Comment 1 Not Assigned 2012-06-30 10:15:40 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df0334b9a53e3144ef87f5dda96a95626f2746cf

show correct preview when opening the dialog, fdo#51590
Comment 2 Not Assigned 2012-06-30 10:24:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d500b55a4ab9b4ec29b8432a638dfb5a1da6fe6c&g=libreoffice-3-6

show correct preview when opening the dialog, fdo#51590


It will be available in LibreOffice 3.6.
Comment 3 pierre-yves samyn 2012-08-25 14:58:26 UTC
Hello

WORKSFORME with Version 3.6.1.2 (Build ID: e29a214) & windows 7 64bits

Regards
Pierre-Yves