show correct preview when opening the dialog, fdo#51590

Change-Id: I58059655ca45c944e260cabbe348ed690dad3a22